<?xml version="1.0"?>
<package>
  <name>rqt_ez_publisher</name>
  <version>0.5.0</version>
  <description>The rqt_ez_publisher package</description>

  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_ez_publisher</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>python-catkin-pkg</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <test_depend>sensor_msgs</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
